<resources>
    <string name="app_name">Jaryq</string>

    <string name="title_menu1">Намаз</string>
    <string name="title_menu2">Кітаптар</string>
    <string name="title_menu3">Уақыт</string>
    <string name="title_menu4">Сұрақ</string>
    <string name="title_menu5">Біз жайлы</string>
    <string name="bookRead">кітапты оқу</string>

    <string name="category">Категориялар</string>
    <string name="other">Әртүрлі</string>
    <string name="kuranAndSunnet">Құран және сүннет</string>
    <string name="korkemMinez">Көркем мінез</string>
    <string name="kulshilik">Құлшылық</string>
    <string name="family">Отбасы</string>
    <string name="duga">Дұға</string>


    <string name="read">оқу</string>
    <string name="booksNotFounds">" кітаптары табылмады"</string>
    <string name="books">" кітаптары"</string>
    <string name="bookFound">" кітап табылды"</string>
    <string name="spinnerHint">Мекен жайын таңдаңыз</string>


    <string name="address">Тараз қаласы</string>
    <string name="phone">Phone: (123) 456-7890</string>
    <string name="work_schedule">дүйсенбі - жұма 09:00-18:30 \nүзіліс 13:00-14:30</string>
    <string name="authorized_person">Ақпаратқа қол жеткізу мәселелері  бойынша уәкілетті тұлға: \nМатаев Е.Ж. \nжұмыс телефоны: 8 (72772) 2-75-03</string>


    <string name="namaz_paryzdary">
        <![CDATA[
            <strong>НАМАЗДЫҢ ПАРЫЗДАРЫ</strong>
<br>Намазда 12 парыз бар. Олардың алтауы намаздың сыртында. Олар <b>“намаздың шарттары”</b> деп аталады. Ал алтауы ішінде. Олар <b>“намаздың рүкіндері”</b> деп аталады.
<br>Намаз дұрыс болуы үшін он екі парыз толығымен орындалуы керек.
<br><br><b>Намаздың шарттары:</b>
<br><b>1) Хадастан (рухани)</b> тазару – рухани кірдің кетуі үшін дәрет алу, қажет болған жағдайда ғұсыл алу.
<br><b>2) Нәжістен тазару:</b> Намаз оқитын адамның денесінде, үстіндегі киімінде және намаз оқитын жерінде лас, нәжіс болса, оларды тазарту.
<br><b>3) Әурет жерін жабу:</b> Намаз оқитын адамның денесіндегі жабылуы керек болған жерлердің жабық болуы.
<br><b>Әурет ер адамдар үшін:</b> Кіндік пен тізе арасы (тізесі қоса жабылады).
<br><b>Ал әйел кісілер үшін:</b> Жүзі, білектің төменгі бөлігі және аяқтың қызыл асықтан төменгі бөлігінен басқа жерінің жабылуы.
<br><b>4) Құбылаға қарау:</b> Намазды құбылаға қарап оқу. Құбыла Мекке қаласында жер жүзінде Аллаға ғибадат ету мақсатымен жасалған алғашқы киелі үй (Қағба). Қағбаны Хазірет Ибраһим мен Исмайыл
салған.
<br><b>5) Уақыт:</b> Намаздарды өз уақыттарында оқу. Уақыт кірмей намаз оқуға болмайды.
<br><b>6) Ниет:</b> Қандай намазды оқитынын біліп, көңілінен, яғни ішінен еске түсіру. Ниеттің тілмен айтылуы сүннет.
<br><br>Намаздың рүкіндері:
<br><b>1) Ифтитах тәкбірі:</b> Намазды бастағанда тәкбір айту.
<br><b>2) Қиям:</b> Намазда тік тұру деген сөз.
<br><b>3) Қирағат:</b> Намазда кемі үш қысқа аят оқу.
<br><b>4) Рүкуғ:</b> Намазда қолды тізеге тіреп, иілу.
<br><b>5) Сәжде:</b> Рукуғдан кейін аяқтың ұшы, тізе және қолмен бірге маңдайды жерге тигізу (қою).
<br><b>6) Қағдаи ахир:</b> Намаз соңында “әттәхиятуді” оқитындай уақыт отыру.

        ]]></string>


    <string name="namaz_turleri">
        <![CDATA[
<br><b>НАМАЗДЫҢ ТҮРЛЕРІ</b>
<br>Намаздар негізінен үшке бөлінеді:
<br>1) Парыз намаздар;
<br>2) Уәжіп намаздар;
<br>3) Нәпіл намаздар.
<br><br><b>А) ПАРЫЗ НАМАЗДАР:</b>
<br><br>Бұлар бес уақыт намаз, жұма және жаназа намаздары.

<br><br><b>Бес уақыт намаз:</b>
<br><b>1) ТАҢ НАМАЗЫ:</b> 4 рәкағат.
<br> 2 рәкағат сүннет;
<br> 2 рәкағат парыз.

<br><br><b>2) БЕСІН НАМАЗЫ:</b> 10 рәкағат.
<br> 4 рәкағат сүннет,
<br> 4 рәкағат парыз,
<br> 2 рәкағат сүннет.

<br><br><b>3) ЕКІНТІ НАМАЗЫ:</b> 8 рәкағат.
<br> 4 рәкағат сүннет,
<br> 4 рәкағат парыз.

<br><br><b>4) АҚШАМ НАМАЗЫ:</b> 5 рәкағат.
<br> 3 рәкағат парыз,
<br> 2 рәкағат сүннет

<br><br><b>5) ҚҰПТАН НАМАЗЫ:</b> 10 рәкағат.
<br> 4 рәкағат алғашқы сүннет,
<br> 4 рәкағат парыз,
<br> 2 рәкағат соңғы сүннет.

<br><br><b>Бес уақыт намаздан басқа парыз намаздар:</b>
<br><b>6) ЖҰМА НАМАЗЫ: 10 рәкағат.</b>
<br> 4 рәкағат алдыңғы сүннет,
<br> 2 рәкағат парыз,
<br> 4 рәкағат соңғы сүннет.

<br><br><b>7) ЖАНАЗА НАМАЗЫ: парыз кифая.</b>

<br><br><b>Ә) УӘЖІП НАМАЗДАР:</b>
<br>1) ҮТІР НАМАЗЫ: 3 рәкағат.
<br>2) ОРАЗА АЙТ НАМАЗЫ: 2 рәкағат.
<br>3) ҚҰРБАН АЙТ НАМАЗЫ: 2 рәкағат.

<br><br><b>Б) НӘПІЛ НАМАЗДАР</b>
<br>Парыз және уәжіп намаздардан басқа намаздарды “нәпіл намаздар” дейді.
<br><br>Нәпіл намаздар екіге бөлінеді:
<br>1)Парыз намаздарына байланысты оқылатын нәпіл намаздар:
<br><br>Бұлар парыздардан бұрын немесе кейін оқылатын сүннеттер мен Рамазанда оқылатын Тарауих намаздары.
<br>2) Парыз намаздарына байланысты емес, нәпіл намаздар.
<br>Бұлар мұстахаб және мәндуб намаздар деп те аталады. Бұл намаздар кейбір уақыттарда сауап алу ниетімен оқылады.
<br><br><b>Кейбірі мыналар:</b>
<br><b>а) Сәске (дұха) намазы:</b> Бұл намаздың ең азы – екі рәкағат. Ең көбі он екі рәкағат оқылады. Уақыты – күннің найза бойы көтерілгенінен бастап күн тас төбеге жетуіне жарты сағат қалғанға дейін жалғасады.
<br><b>ә) Тәһәжжүд намазы:</b> Түн ортасында оқылатын ең азы екі рәкағат, ең көп сегіз рәкағат оқылады.
<br><b>б) Тахиятул мәсжид намазы:</b> Мешітке барғанда (мәкруһ уақыт болмаған жағдайда) екі рәкағат оқылатын намаз.

    ]]></string>

</resources>