<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_menu1"
        android:icon="@drawable/namaz_icon"
        android:title="@string/title_menu1" />

    <item
        android:id="@+id/navigation_menu2"
        android:icon="@drawable/baseline_book_24"
        android:title="@string/title_menu2" />

    <item
        android:id="@+id/navigation_menu3"
        android:icon="@drawable/ic_time"
        android:title="@string/title_menu3" />

<!--    <item-->
<!--        android:id="@+id/navigation_menu4"-->
<!--        android:icon="@drawable/ic_quesiton"-->
<!--        android:title="@string/title_menu4" />-->

    <item
        android:id="@+id/navigation_menu5"
        android:icon="@drawable/ic_about"
        android:title="@string/title_menu5" />

</menu>